--- a/modules/core/client/css/navbar.css
+++ b/modules/core/client/css/navbar.css
@@ -9,6 +9,8 @@
   -moz-box-shadow: 0 0 15px #888;
   -webkit-box-shadow: 0 0 15px#888;
   box-shadow: 0 0 15px #888;
+
+  z-index: 20;
 }
 .navbar-inverse .navbar-toggle {
   border: 0 solid; 
